파일 업로드 구현
파일을 업로드 하면 UUID 형태로 폴더에 저장시키며 DB에 해당 정보를 저장하도록 구현하였음.
게시글 보기에서는 원본 파일명이 보이도록 구현하였음.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,10 @@ spring:
     username: ebsoft
     password: ebsoft
 
+    servlet:
+      multipart:
+        max-file-size: 5MB
+        max-request-size: 15MB
+
+file:
+  dir: C:\Users\82103\Desktop\upload\
